[package]
name = "runkr"
version = "0.1.0"
authors = ["danielsanchezq <danielsanchez@off-the-grid.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
uuid = { version = "0.4", features = ["serde", "v4"] }
lazy_static = "1.4.*"
regex = "1.*"