[package]
name = "runkr"
version = "0.1.0"
authors = ["danielsanchezq <danielsanchez@bunkr.app>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/danielsanchezq/runkr"
repository = "https://github.com/danielsanchezq/runkr"
documentation = "https://docs.rs/runkr"
keywords = ["bunkr", "crypto", "security"]
description = "A Rust Bunkr client"


[dependencies]
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
uuid = { version = "0.4", features = ["serde", "v4"] }
lazy_static = "1.4.*"
regex = "1.*"